Fixed design bugs on small screens

--- a/stylesheets/footer.less
+++ b/stylesheets/footer.less
@@ -1,8 +1,35 @@
 footer {
-  color: @bg-color;
+  color: @gray-lighter;
   font-family: @font-family-sans-serif;
   font-weight: 300;
   background-color: @gray-darker;
-  height: @navbar-height;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
   .vertical-align-children;
+  @media (min-width @screen-sm-min) {
+    height: @navbar-height;
+  }
+  
+  span,
+  strong {
+    display: block;
+    @media (min-width: @screen-sm-min) {
+      display: inline-block;
+    }
+  }
+  
+  span:last-child {
+    @media (min-width: @screen-sm-min) {
+      .pull-right;
+    }
+  }
+  
+  hr {
+    margin: 10px 0;
+    border-color: @gray-dark;
+    @media (min-width: @screen-sm-min) {
+      display: none;
+    }
+  }
 }
