--- a/stylesheets/scaffolding.less
+++ b/stylesheets/scaffolding.less
@@ -15,3 +15,9 @@ button {
     border-bottom-width: 1px;
   }
 }
+
+.container {
+  @media (max-width: @screen-xs-max) {
+    width: 100%; 
+  }
+}
