--- a/stylesheets/typography.less
+++ b/stylesheets/typography.less
@@ -10,6 +10,7 @@ h6 {
     font-family: @font-family-serif;
     display: block;
     text-align: inherit;
+    line-height: 1.2
   }
 }
 
